<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.hoptima.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="id.hoptima.ui.bookmarks.BookmarksFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_bookmarksFragment_to_detailFragment"
            app:destination="@id/detailFragment" >
        </action>

    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="id.hoptima.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="id.hoptima.ui.detail.DetailFragment"
        android:label="DetailFragment"
        tools:layout="@layout/fragment_detail"/>


</navigation>