<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surfaceContainer"
        android:padding="4dp"
        app:alignItems="center"
        app:dividerDrawable="@drawable/divider_medium"
        app:flexDirection="row"
        app:justifyContent="space_between"
        app:layout_constraintBottom_toTopOf="@id/sv_chat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showDivider="middle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_back"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/back"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconTint="@color/md_theme_secondary"
            app:layout_flexShrink="0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_flexGrow="1" />

        <Button
            android:id="@+id/btn_new_chat"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/new_chat"
            app:icon="@drawable/outline_add_comment_24"
            app:layout_flexShrink="0" />

    </com.google.android.flexbox.FlexboxLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/rl_message_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fl_guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:alpha="0"
                app:alignItems="center"
                app:dividerDrawable="@drawable/divider_medium"
                app:flexDirection="row"
                app:showDivider="middle">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_ai_logo"
                    app:layout_flexShrink="0"
                    app:shapeAppearanceOverlay="@style/CircleImageView" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_flexGrow="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/hoptima_ai"
                        android:textAppearance="?attr/textAppearanceTitleSmall" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="?attr/colorSecondary">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:text="@string/guide_chat"
                            android:textColor="?attr/colorOnSecondary" />
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>

            <LinearLayout
                android:id="@+id/ll_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="24dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="8dp"
                    android:text="@string/you"
                    android:textAppearance="?attr/textAppearanceTitleSmall" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="?attr/colorPrimary">

                    <TextView
                        android:id="@+id/tv_query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="12dp"
                        android:textColor="?attr/colorOnPrimary" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/fl_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:visibility="gone"
                app:alignItems="center"
                app:dividerDrawable="@drawable/divider_medium"
                app:flexDirection="row"
                app:showDivider="middle">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_ai_logo"
                    app:layout_flexShrink="0"
                    app:shapeAppearanceOverlay="@style/CircleImageView" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_flexGrow="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:text="@string/hoptima_ai"
                        android:textAppearance="?attr/textAppearanceTitleSmall" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="?attr/colorSecondary">

                        <TextView
                            android:id="@+id/tv_result_message"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="12dp"
                            android:text="@string/finding_recommendation"
                            android:textColor="?attr/colorOnSecondary" />
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-16dp"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rl_message_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_surfaceContainer"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/btn_get_recommendation"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_criteria"
                android:maxLines="5"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_recommendation"
            style="?attr/materialIconButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/send"
            app:icon="@drawable/outline_send_24"
            app:iconSize="28dp" />

    </RelativeLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>